# yet-another-url-shortner

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
migrations/: 20250818173950_basic_table.sql  20250826093335_users.sql
src/: cache.rs  errors.rs  main.rs  partials.rs  url_store.rs
src/views/: dashboard.rs  error.rs  login.rs  mod.rs  page.rs
static/: styles.css  utils.js
