[package]
name = "yet-another-url-shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
hypertext = { version = "0.12.1", features = ["axum", "htmx"] }
# maud = { version = "0.27.0", features = ["axum"] }
nanoid = "0.4.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio-native-tls"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
